--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
-/* Your CSS Code here. */
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+*{
+	margin:0;
+}
+.conatiner{
+	display:flex;
+	flex-direction:row;
+	align-items:center;
+	
+}
